--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.1'
+version: '2.4'
 services:
   db:
     image: mysql
@@ -9,21 +9,27 @@ services:
       - "3306:3306"
     volumes:
       - devdojo_data:/var/lib/mysql
+    mem_limit: 512m
 
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus
     volumes:
       - "./src/main/resources/prometheus.yml:/etc/prometheus/prometheus.yml"
-    command:
-      - "--config.file=/etc/prometheus/prometheus.yml"
+    command: "--config.file=/etc/prometheus/prometheus.yml"
     ports:
       - "9090:9090"
+    mem_limit: 128m
 
   grafana:
     image: grafana/grafana:latest
     container_name: grafana
     ports:
       - "3000:3000"
+    mem_limit: 128m
+
+  springboot2-essentials:
+    image: lucasvidoto/springboot2essentials:0.0.1-SNAPSHOT
+
 volumes:
   devdojo_data:
